--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,12 +36,6 @@ body {
 	grid-area: player;
 }
 
-#vsText {
-	grid-area: vs;
-	font-size: 1.4rem;
-	font-weight: bolder;
-}
-
 #comBox {
 	grid-area: com;
 }
@@ -52,6 +46,15 @@ body {
 	margin: 1rem .5rem;
 	font-weight: bolder;
 	font-size: 1.2rem;
+	text-align: center;
+}
+
+#vsText {
+	grid-area: vs;
+	font-size: 1.8rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #resultDiv {
@@ -83,6 +86,14 @@ button:hover {
 	color: var(--bgcolor);
 }
 
+.font-huge {
+	font-size: 2rem;
+}
+
+.font-med {
+	font-size: 1.5rem;
+}
+
 footer {
 	position: absolute;
 	bottom: 0;
@@ -94,6 +105,8 @@ footer {
 	color: var(--bgcolor);
 }
 
-.icon:hover, .button:hover {
-  fill: red;
+a {
+	text-decoration: none;
+	font-weight: bolder;
+	color: crimson;
 }
